--- a/ChangeTranslator/App.config
+++ b/ChangeTranslator/App.config
@@ -1,6 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+
+
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+
+  <log4net>
+
+    
+    <!--默认日志记录器（随便给name值，ILog log = LogManager.GetLogger("ChangeTranslator");）-->
+    <root>
+      <level value="WARN" />
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+
+    <!--自定义日志记录器，根据name获取（ILog log = LogManager.GetLogger("ChangeTranslator.Logging");）-->
+    <!--断开与root的继承关系，防止重复写入日志（root一次，logger一次）-->
+    <logger name="ChangeTranslator.Logging" additivity="false">
+      <level value="DEBUG"/>
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </logger>
+    
+    <!--日志的等级，它们由高到底分别为：
+    OFF > FATAL > ERROR > WARN > INFO > DEBUG  > ALL 
+    OFF所有的写入方法都不写到日志里，ALL则相反。例如当我们设成Info时，logger.Debug就会被忽略而不写入文件，但是FATAL,ERROR,WARN,INFO会被写入，因为他们等级高于INFO。
+    -->
+    
+    
+
+    <appender name="LogFileAppender" type="log4net.Appender.FileAppender" >
+      <param name="File" value="log-file.txt" />
+      <param name="AppendToFile" value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="Header" value="[Header] "/>
+        <param name="Footer" value="[Footer] "/>
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x]  - %m%n" />
+      </layout>
+      
+      <!--使用过滤器可以过滤掉Appender输出的内容-->
+      <!--
+            DenyAllFilter 阻止所有的日志事件被记录
+
+            LevelMatchFilter 只有指定等级的日志事件才被记录
+
+            LevelRangeFilter 日志等级在指定范围内的事件才被记录
+
+            LoggerMatchFilter 与Logger名称匹配，才记录
+
+            PropertyFilter 消息匹配指定的属性值时才被记录
+
+            StringMathFilter 消息匹配指定的字符串才被记录
+      -->
+     <!-- <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="DEBUG" />
+        <param name="LevelMax" value="WARN" />
+      </filter>
+      -->
+      
+    </appender>
+
+    <appender name="ConsoleAppender"  type="log4net.Appender.ConsoleAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern"  value="%d [%t] %-5p %c [%x] - %m%n" />
+      </layout>
+    </appender>
+
+  </log4net>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 </configuration>
